Sweep 2.5: Codexes for Packets, Data Components next