@@ -1,12 +1,12 @@
 package elucent.eidolon.common.spell;
 
-import elucent.eidolon.Eidolon;
 import elucent.eidolon.api.capability.IMana;
 import elucent.eidolon.api.capability.IReputation;
 import elucent.eidolon.api.spells.Sign;
 import elucent.eidolon.common.deity.Deities;
 import elucent.eidolon.network.MagicBurstEffectPacket;
 import elucent.eidolon.network.Networking;
+import elucent.eidolon.registries.EidolonDataComponents;
 import elucent.eidolon.registries.Registry;
 import elucent.eidolon.registries.Signs;
 import elucent.eidolon.util.DamageTypeData;
@@ -26,11 +26,11 @@ import net.minecraft.world.phys.AABB;
 import net.minecraft.world.phys.Vec3;
 import net.neoforged.bus.api.SubscribeEvent;
 import net.neoforged.neoforge.common.NeoForge;
+import net.neoforged.neoforge.common.Tags;
 
 import java.util.List;
 
 public class DarkTouchSpell extends StaticSpell {
-    public static final String NECROTIC_KEY = ResourceLocation.fromNamespaceAndPath(Eidolon.MODID,"necrotic" ).toString();
 
     public DarkTouchSpell(ResourceLocation name, Sign... signs) {
         super(name, 20, signs);
@@ -41,17 +41,16 @@ public class DarkTouchSpell extends StaticSpell {
     @SubscribeEvent
     public static void onHurt(LivingHurtEvent event) {
         if (event.getSource().getEntity() instanceof LivingEntity living && !event.getSource().is(DamageTypes.WITHER)) {
-            var tag = living.getMainHandItem().getTag();
-            if (tag != null && tag.contains(NECROTIC_KEY)) {
+            ItemStack itemStack = living.getMainHandItem();
+            if (itemStack.has(EidolonDataComponents.NECROTIC)) {
                 float amount = Math.min(1, event.getAmount());
                 event.setAmount(event.getAmount() - amount);
                 if (event.getAmount() <= 0) event.setCanceled(true);
                 int prevHurtResist = event.getEntity().invulnerableTime;
                 event.getEntity().invulnerableTime = 0;
-                if (event.getEntity().hurt(DamageTypeData.source(living.level, DamageTypes.WITHER, living, null), amount)) {
+                if (event.getEntity().hurt(DamageTypeData.source(living.level(), DamageTypes.WITHER, living, null), amount)) {
 
-                    tag.putInt(NECROTIC_KEY, -1);
-                    if (tag.getInt(NECROTIC_KEY) <= 0) tag.remove(NECROTIC_KEY);
+                    itemStack.set(EidolonDataComponents.NECROTIC, itemStack.get(EidolonDataComponents.NECROTIC) - 1);
 
                     if (living.getHealth() <= 0) event.setCanceled(true);
                     else living.invulnerableTime = prevHurtResist;
@@ -71,15 +70,15 @@ public class DarkTouchSpell extends StaticSpell {
         Vec3 v = getVector(world, player);
         List<ItemEntity> items = world.getEntitiesOfClass(ItemEntity.class, new AABB(v.x - 1.5, v.y - 1.5, v.z - 1.5, v.x + 1.5, v.y + 1.5, v.z + 1.5));
         if (items.size() != 1) return false;
-        ItemStack stack = items.get(0).getItem();
+        ItemStack stack = items.getFirst().getItem();
         return stack.getCount() == 1 && canTouch(stack);
     }
 
     boolean canTouch(ItemStack stack) {
         return stack.getItem() == Registry.PEWTER_INLAY.get()
-               || stack.getItem() == Items.BLACK_WOOL
-               || (stack.getItem() instanceof RecordItem && stack.getItem() != Registry.PAROUSIA_DISC.get())
-               || (stack.isDamageableItem() && stack.getMaxStackSize() == 1); // is a tool
+                || stack.getItem() == Items.BLACK_WOOL
+                || (stack.is(Tags.Items.MUSIC_DISCS) && stack.getItem() != Registry.PAROUSIA_DISC.get())
+                || (stack.isDamageableItem() && stack.getMaxStackSize() == 1); // is a tool
     }
 
     protected ItemStack touchResult(ItemStack stack, Player player) { // assumes canTouch is true
@@ -87,11 +86,11 @@ public class DarkTouchSpell extends StaticSpell {
             return new ItemStack(Registry.UNHOLY_SYMBOL.get());
         else if (stack.getItem() == Items.BLACK_WOOL)
             return new ItemStack(Registry.TOP_HAT.get());
-        else if (stack.getItem() instanceof RecordItem && stack.getItem() != Registry.PAROUSIA_DISC.get())
+        else if (stack.is(Tags.Items.MUSIC_DISCS) && stack.getItem() != Registry.PAROUSIA_DISC.get())
             return new ItemStack(Registry.PAROUSIA_DISC.get());
         else {
             IMana.expendMana(player, getCost());
-            stack.getOrCreateTag().putInt(NECROTIC_KEY, 50);
+            stack.set(EidolonDataComponents.NECROTIC, 50);
             return stack;
         }
 
@@ -103,12 +102,12 @@ public class DarkTouchSpell extends StaticSpell {
         List<ItemEntity> items = world.getEntitiesOfClass(ItemEntity.class, new AABB(v.x - 1.5, v.y - 1.5, v.z - 1.5, v.x + 1.5, v.y + 1.5, v.z + 1.5));
         if (items.size() == 1) {
             if (!world.isClientSide) {
-                ItemStack stack = items.get(0).getItem();
+                ItemStack stack = items.getFirst().getItem();
                 if (canTouch(stack)) {
-                    items.get(0).setItem(touchResult(stack, player));
-                    Vec3 p = items.get(0).position();
-                    items.get(0).setDefaultPickUpDelay();
-                    Networking.sendToTracking(world, items.get(0).blockPosition(), new MagicBurstEffectPacket(p.x, p.y, p.z, Signs.WICKED_SIGN.color(), Signs.BLOOD_SIGN.color()));
+                    items.getFirst().setItem(touchResult(stack, player));
+                    Vec3 p = items.getFirst().position();
+                    items.getFirst().setDefaultPickUpDelay();
+                    Networking.sendToNearbyClient(world, items.getFirst().blockPosition(), new MagicBurstEffectPacket(p.x, p.y, p.z, Signs.WICKED_SIGN.color(), Signs.BLOOD_SIGN.color()));
                 }
             } else {
                 world.playSound(player, player.blockPosition(), SoundEvents.ENCHANTMENT_TABLE_USE, SoundSource.NEUTRAL, 1.0F, 0.6F + world.random.nextFloat() * 0.2F);
